Add category color from frontmatter

--- a/assets/sass/navTree.scss
+++ b/assets/sass/navTree.scss
@@ -1,3 +1,4 @@
+@import "hugo:vars";
 @import '_variables.scss';
 
 nav.navTree {
@@ -11,15 +12,25 @@ nav.navTree {
     padding-right: 20px;
     border-right: solid 1px #ccc;
 
-    .category-link-container {
-        padding: 10px 12px;
-        
-        h3 {
-            font-size: 24px;
-        }
+    @if type-of($category-color) == color {
+        .category-link-container {
+            background: -webkit-linear-gradient(0deg, $category-color, adjust-color($category-color, $hue: -20));;
+            border-image-source: linear-gradient(to right, $category-color, transparent);
+            background-clip: text;
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            border-bottom-style: solid;
+            border-image-slice: 1;
+            border-width: 2px;
+            padding: 10px 12px;
 
-        label {
-            display: none;
+            h3 {
+                font-size: 24px;
+            }
+    
+            label {
+                display: none;
+            }
         }
     }
 
@@ -37,6 +48,15 @@ nav.navTree {
         li {
             font-size: 14px;
             padding: 6px 12px;
+
+            @if type-of($category-color) == color {
+                &.current {
+                    background-color: rgba($category-color, 0.08);
+                    color: adjust-color($category-color, $lightness: -10%);
+                    font-weight: 500;
+                    border-radius: 0 10px 10px 0;
+                }
+            }
         }
 
         .nav-section {
@@ -92,31 +112,6 @@ nav.navTree {
                 &.closed {
                     display: none;
                 }
-            }
-        }
-    }
-}
-
-@each $c in $category {
-    .navTree.#{map-get($c, 'type')} {
-        .category-link-container {
-            background: -webkit-linear-gradient(0deg, map-get($c, 'color'), adjust-color(map-get($c, 'color'), $hue: -20));;
-            border-image-source: linear-gradient(to right, map-get($c, 'color'), transparent);
-            background-clip: text;
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            border-bottom-style: solid;
-            border-image-slice: 1;
-            border-width: 2px;
-            padding: 10px 12px;
-        }
-
-        ul {
-            li.current {
-                background-color: rgba(map-get($c, 'color'), 0.08);
-                color: adjust-color(map-get($c, 'color'), $lightness: -10%);
-                font-weight: 500;
-                border-radius: 0 10px 10px 0;
             }
         }
     }
