--- a/assets/sass/_variables.scss
+++ b/assets/sass/_variables.scss
@@ -2,17 +2,17 @@ $tags: (
     (
         class: 'markdown',
         description: 'いい言語',
-        color: #00ca00,
+        color: hsl(204, 100%, 43%),
     ),
     (
         class: 'app',
         description: 'ネイティブ',
-        color: #ff2600,
+        color: #00d440,
     ),
     (
         class: 'three-d',
         description: '3次元',
-        color: #ef5bff,
+        color: hsl(294, 100%, 45%),
     ),
     (
         class: 'goldmark',
@@ -22,7 +22,7 @@ $tags: (
     (
         class: 'highlight',
         description: '世界最速のウェブサイト構築フレームワーク',
-        color: #8cffd7,
+        color: #ea0071,
     ),
 );
 
