--- a/themes/myTheme/layouts/partials/head.html
+++ b/themes/myTheme/layouts/partials/head.html
@@ -78,7 +78,7 @@
     {{ end }}
 
     <!-- Section and Article Page CSS -->
-    {{ $include := slice "navTree" "article" "alert" }}
+    {{ $include := slice "navTree" "single" "alert" }}
     {{ $categories := slice }}
     {{ $categoryColor := slice }}
 
