--- a/themes/myTheme/layouts/_default/single.html
+++ b/themes/myTheme/layouts/_default/single.html
@@ -28,7 +28,7 @@
                     </div>
                 </div>  */}}
                 <ul class="tags">
-                    {{ range .Params.tags | append ((index $hierarchy 1).Title) | sort }}
+                    {{ range .Params.tags }}
                         <a href="/tags/{{ . | lower }}">
                             <li class="{{ . | lower }}">{{ . }}</li>
                         </a>
