--- a/assets/sass/taxonomy.scss
+++ b/assets/sass/taxonomy.scss
@@ -1,72 +1,116 @@
-@import "_variables.scss";
+@import 'hugo:vars';
+@import '_variables.scss';
+@import '_functions.scss';
 
-@each $tag in $tags {
-    h1.#{map-get($tag, 'class')} {
-        width: fit-content;
-        padding: 2px 12px;
-        margin: 12px 0;
-        border: solid 1px map-get($tag, 'color');
-        border-radius: 9999px;
-        font-size: 26px;
-        font-weight: 600;
-        color: map-get($tag, 'color');
-        background-color: #{map-get($tag, 'color')}16;
-    }
+$categories: ();
+
+@for $i from 1 through length($category-title) {
+    $t: nth($category-title, $i);
+    $c: nth($category-color, $i);
+    $categories: append($categories, (("class": $t, "color": #{$c})));
 }
 
-.terms {
-    margin: 30px 0;
+.container {
+    max-width: 1200px;
+    padding: 0 16px;
 
-    .row {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding: 14px 8px;
-        border-top: solid 1px #ccc;
+    p.tag-root {
+        display: inline-block;
+        padding: 8px 0;
+        font-weight: 600;
 
-        &:last-child {
-            border-bottom: solid 1px #ccc;
+        &::before {
+            display: inline-block;
+            font-family: "Font Awesome 5 Free";
+            content: "\f053";
+            width: 16px;
+            text-align: center;
+            padding-right: 2px;
         }
+    }
 
-        a.to-article {
-            width: 20%;
-            li {
+    @each $tag in $tags {
+        h1.#{map-get($tag, 'class')} {
+            width: fit-content;
+            padding: 2px 12px;
+            margin: 10px 0;
+            border: solid 1px map-get($tag, 'color');
+            border-radius: 9999px;
+            font-size: 22px;
+            font-weight: 600;
+            color: map-get($tag, 'color');
+            background-color: #{map-get($tag, 'color')}16;
+        }
+    }
+
+    @each $category in $categories {
+        h1.#{map-get($category, 'class')} {
+            width: fit-content;
+            padding: 2px 12px;
+            margin: 10px 0;
+            border: solid 1px map-get($category, 'color');
+            border-radius: 9999px;
+            font-size: 22px;
+            font-weight: 600;
+            color: map-get($category, 'color');
+            background-color: adjust-color(string2hsl(map-get($category, 'color')), $alpha: -0.9375);
+        }
+    }
+
+    ul.terms {
+        margin: 20px 0;
+
+        .row {
+            // display: flex;
+            // justify-content: space-between;
+            // align-items: center;
+            padding: 10px 8px;
+            border-top: solid 1px #ddd;
+
+            &:last-child {
+                border-bottom: solid 1px #ddd;
+            }
+
+            li.to-article {
                 list-style-type: none;
+                font-size: 14px;
+                white-space: nowrap;
+                overflow: hidden;
             }
-        }
 
-        .tags-container {
-            display: flex;
-            justify-content: flex-start;
-            align-items: center;
-            flex-grow: 1;
-            
-            @each $tag in $tags {
-                a.#{map-get($tag, 'class')} {
-                    list-style-type: none;
-                    width: fit-content;
-                    padding: 1px 6px;
-                    margin: 12px 4px;
-                    border: solid 1px map-get($tag, 'color');
-                    border-radius: 9999px;
-                    font-size: 12px;
-                    font-weight: 600;
-                    color: map-get($tag, 'color');
-                    background-color: #{map-get($tag, 'color')}16;
-                }
-            }
-        }
+            // .tags-container {
+            //     display: flex;
+            //     justify-content: flex-start;
+            //     align-items: center;
+            //     flex-grow: 1;
+                
+            //     @each $tag in $tags {
+            //         a.#{map-get($tag, 'class')} {
+            //             list-style-type: none;
+            //             width: fit-content;
+            //             padding: 1px 6px;
+            //             margin: 12px 4px;
+            //             border: solid 1px map-get($tag, 'color');
+            //             border-radius: 9999px;
+            //             font-size: 12px;
+            //             font-weight: 600;
+            //             color: map-get($tag, 'color');
+            //             background-color: #{map-get($tag, 'color')}16;
+            //         }
+            //     }
+            // }
 
-        a.category-container {
-            width: 14%;
-            display: block;
-            display: flex;
-            justify-content: flex-start;
-            align-items: center;
+            // a.category-container {
+            //     width: 14%;
+            //     display: block;
+            //     display: flex;
+            //     justify-content: flex-start;
+            //     align-items: center;
 
-            p {
-                padding: 0 6px;
-            }
+            //     p {
+            //         padding: 0 6px;
+            //     }
+            // }
         }
     }
 }
