Place article-container  on center

--- a/assets/sass/single.scss
+++ b/assets/sass/single.scss
@@ -16,7 +16,7 @@ $categories: ();
     .article-container {
         width: calc(100% - 320px - 100px);
         max-width: 900px;
-        margin: 0 50px;
+        margin: 0 auto;
 
         .category-eyecatch {
             margin: 40px 0;
