--- a/assets/sass/top.scss
+++ b/assets/sass/top.scss
@@ -91,6 +91,11 @@
             margin: 30px 0 0;
         }
 
+        h4 {
+            font-size: 18px;
+            margin: 20px 0 10px;
+        }
+
         ul {
             width: fit-content;
             margin: 0 auto;
@@ -98,6 +103,10 @@
             li {
                 padding: 4px 0;
                 font-size: 20px;
+
+                strong {
+                    background: linear-gradient(transparent 80%, #b3b3b3 80%);
+                }
             }
         }
 
@@ -169,6 +178,30 @@
             text-align: center;
             padding: 12px;
             margin: 0 auto;
+        }
+
+        pre {
+            background-color: #fff;
+            border: solid 2px #ccc;
+            border-radius: 16px;
+            padding: 24px 28px;
+            margin: 0 0 60px;
+            color: #555;
+            overflow-x: scroll;
+    
+            code {
+                font-family: 'Roboto Mono', monospace;
+                font-size: 14px;
+                padding: 0;
+                margin: 0;
+            }
+        }
+
+        iframe {
+            width: 100%;
+            height: 500px;
+            border: solid 2px #ccc;
+            border-radius: 16px;
         }
     }
 }
