Add sample markdown

--- a/themes/myTheme/layouts/index.html
+++ b/themes/myTheme/layouts/index.html
@@ -54,10 +54,10 @@
             </div>
             <h2>基本的に1つの記事は1人が書いたもの</h2>
             <ul>
-                <li>情報が断片的になる</li>
-                <li>他の人が記事を修正できない</li>
-                <li>情報が重複するため書き手の労力が増える</li>
-                <li>読み手が目的の情報を見つけるのに時間がかかる</li>
+                <li>情報が<strong>断片的</strong>になる</li>
+                <li>他の人の記事を<strong>修正できない</strong></li>
+                <li>情報が重複するため書き手の<strong>労力が増える</strong></li>
+                <li>読み手が目的の情報を見つけるのに<strong>時間がかかる</strong></li>
             </ul>
         </div>
     </div>
@@ -86,8 +86,44 @@
             </div>
             <i class="fa-solid fa-arrow-down"></i>
             <i class="fa-regular fa-file-lines"></i>
-            <h2>すべての人が記事の作成、修正、追記、改善ができる</h2>
-            <h3>オープンソースのナレッジデータベース</h3>
+            <h2>すべての人が既存の記事に追記、修正もできる</h2>
+        </div>
+    </div>
+
+    <div class="wrapper">
+        <div class="container">
+            <h2>強力な知識のデータベースです</h2>
+            <p>少数の人がすべてを網羅するよりも、多数の人が各々の得意分野を書いた方が圧倒的に有利であり、効率もいいはずです。記事が編集されればされるほど、多くのエンジニアの知識が凝集した、正確かつ有用で価値のあるページになります。</p>
+            <h3>パワフルな Hugo とシンプルな Markdown</h3>
+            <p>高速な静的サイトジェネレーターのHugoを使用しているため、記事の分類やタグ付けが非常に簡単です。多くの人の共同執筆でありながらシンプルなため、記事を書くことだけに集中できます。</p>
+            <h4>content/python/introduction.md</h4>
+            <pre>
+<code>+++
+title = "Markdownの書き方"
+description = "一般的な記法に加えて、OpenStudyで使える記法を説明します。記事を作成する際の参考にしてください。"
+tags = ["Markdown"]
+author = ["lin-24-ia"]
++++
+
+# 見出し
+
+```text
+# 大見出し
+## 見出し
+### 小見出し
+```
+
+OpenStudyでは、HTMLにレンダリングされるとそれぞれが に対応します。目次に表示されるのは大見出しと見出しのみです。
+
+# リスト
+
+## 番号なしリスト
+
+ハイフン`-`、プラス`+`、アスタリスク`*`のいずれかを先頭に記述します。スペース4つでネストできます。</code></pre>
+        <h4>レンダリングされたページ</h4>
+        <iframe src="/javascript/markdown-cheetsheet/"></iframe>
+        <h3>GitHubで管理しています</h3>
+        <p>OpenStudyのコンテンツはGitHubで公開しているオープンソースです。どなたでも、新しい記事を作成したり、既存の記事に追記、修正できます。</p>
         </div>
     </div>
 
