--- a/assets/sass/single.scss
+++ b/assets/sass/single.scss
@@ -19,18 +19,19 @@ $categories: ();
         margin: 0 auto;
 
         .category-eyecatch {
-            margin: 40px 0;
+            margin: 20px 0;
 
             img {
-                width: 80%;
-                height: 200px;
-                object-fit: contain;
+                display: block;
+                margin: 0 auto;
+                width: 100%;
+                max-height: 200px;
             }
         }
 
         h1.title {
             font-size: 32px;
-            padding: 12px 0;
+            margin: 20px 0;
         }
 
         p.description {
