Fix background of `<iframe>`

--- a/assets/sass/top.scss
+++ b/assets/sass/top.scss
@@ -185,7 +185,7 @@
             border: solid 2px #ccc;
             border-radius: 16px;
             padding: 24px 28px;
-            margin: 0 0 60px;
+            margin: 0 0 30px;
             color: #555;
             overflow-x: scroll;
     
@@ -202,6 +202,7 @@
             height: 500px;
             border: solid 2px #ccc;
             border-radius: 16px;
+            background-color: #fff;
         }
     }
 }
