--- a/themes/myTheme/layouts/index.html
+++ b/themes/myTheme/layouts/index.html
@@ -19,14 +19,16 @@
         <div class="container category">
             <div class="category-container">
                 {{ range .Site.Sections.ByTitle }}
-                    <a href="{{ .RelPermalink }}" class="category-item">
-                        {{ if fileExists ((.Title | lower) | printf "static/thumbnails/%s" | printf "%s.svg") }}
-                            <img src="/thumbnails/{{ .Title | lower }}.svg" alt="Category-Thumbnail">
-                        {{ else if fileExists (.Title | lower) | printf "static/thumbnails/%s" | printf "%s.png" }}
-                            <img src="/thumbnails/{{ .Title | lower }}.png" alt="Category-Thumbnail">
-                        {{ end }}
-                        <p>{{ .Title }}</p>
-                    </a>
+                    {{ if ne .Title "Contribute" }}
+                        <a href="{{ .RelPermalink }}" class="category-item">
+                            {{ if fileExists ((.Title | lower) | printf "static/thumbnails/%s" | printf "%s.svg") }}
+                                <img src="/thumbnails/{{ .Title | lower }}.svg" alt="Category-Thumbnail">
+                            {{ else if fileExists (.Title | lower) | printf "static/thumbnails/%s" | printf "%s.png" }}
+                                <img src="/thumbnails/{{ .Title | lower }}.png" alt="Category-Thumbnail">
+                            {{ end }}
+                            <p>{{ .Title }}</p>
+                        </a>
+                    {{ end }}
                 {{ end }}
             </div>
         </div>
@@ -120,6 +122,7 @@ OpenStudyでは、HTMLにレンダリングされるとそれぞれが に対応
 ## 番号なしリスト
 
 ハイフン`-`、プラス`+`、アスタリスク`*`のいずれかを先頭に記述します。スペース4つでネストできます。</code></pre>
+        <i class="fa-solid fa-arrow-down"></i>
         <h4>レンダリングされたページ</h4>
         <iframe src="/javascript/markdown-cheetsheet/"></iframe>
         <h3>GitHubで管理しています</h3>
@@ -130,7 +133,7 @@ OpenStudyでは、HTMLにレンダリングされるとそれぞれが に対応
     <div class="wrapper">
         <div class="container">
             <h2><span>あなたの知識が</span><span>大きな力になります</span></h2>
-            <a href="/contribute" class="contribute">記事を書く</a>
+            <a href="/contribute" class="contribute">Contribute</a>
         </div>
     </div>
 {{ end }}
