--- a/themes/myTheme/layouts/_default/single.html
+++ b/themes/myTheme/layouts/_default/single.html
@@ -9,7 +9,7 @@
         <div class="article-container">
             {{ with .Params.CategoryEyecatch }}
                 <div class="category-eyecatch">
-                    <img src="/images/categoryIcon/{{ . }}" alt="Category-Eyecatch">
+                    <img src="{{ . }}" alt="Category-Eyecatch">
                 </div>
             {{ end }}
 
